--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.polybrush": "1.1.8",
     "com.unity.probuilder": "5.2.4",
     "com.unity.progrids": "3.0.3-preview.6",
+    "com.unity.render-pipelines.universal": "14.0.12",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
     "com.unity.ugui": "1.0.0",
